@@ -5,6 +5,7 @@ Cacti CHANGELOG
 -issue#4892: Recache Loop after many devices go offline
 -issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
 -feature#3131: Button to reindex bad indexes
+-feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
 -feature#4874: Add support for showing business hours
 -feature#4890: Add multi threading for Poller rechace script
 -feature#4899: Pass poller status to script_server to avoid connecting to the main database when offline or in recovery
